--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,44 @@
+alabaster==0.7.10
 alembic==0.9.3
 aniso8601==1.2.1
+Babel==2.4.0
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
+coverage==4.4.1
+docutils==0.13.1
 Flask==0.12.2
-Flask-Migrate==2.0.4
-Flask-RESTful==0.3.6
+Flask-HTTPAuth==3.2.3
+Flask-Migrate==2.1.0
+flask-restplus==0.10.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
+get==0.0.0
+idna==2.5
+imagesize==0.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
-Mako==1.0.6
+jsonschema==2.6.0
+Mako==1.0.7
 MarkupSafe==1.0
-psycopg2==2.7.1
-python-dateutil==2.6.0
+passlib==1.7.1
+post==0.0.0
+psycopg2==2.7.3
+public==0.0.0
+Pygments==2.2.0
+python-dateutil==2.6.1
 python-editor==1.0.3
 pytz==2017.2
+query-string==0.0.0
+request==0.0.0
+requests==2.18.2
+setupfiles==0.0.50
 six==1.10.0
-SQLAlchemy==1.1.11
+snowballstemmer==1.2.1
+Sphinx==1.6.3
+sphinxcontrib-httpdomain==1.5.0
+sphinxcontrib-websupport==1.0.1
+SQLAlchemy==1.1.12
+urllib3==1.22
 Werkzeug==0.12.2
