--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: python manage.py test
+script: python manage.py cov
 after_success:
   coveralls
