[chore] Update travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ python:
 
   - "3.6"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: 
+  - "pip install -r requirements.txt"
+  - "pip install coveralls"
 # command to run tests
 script: python manage.py cov
 after_success:
