--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
 # command to run tests
-script: python manage.py cov
+script: nosetests --cover-package=bucketlist --with-coverage
 after_success:
   coveralls
 
