--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-HTTPAuth==3.2.3
 Flask-Migrate==2.1.0
 flask-restplus==0.10.1
 Flask-Script==2.0.5
+Flask-Sphinx-Themes==1.0.1
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 idna==2.5
@@ -20,6 +21,7 @@ Jinja2==2.9.6
 jsonschema==2.6.0
 Mako==1.0.7
 MarkupSafe==1.0
+nose==1.3.7
 passlib==1.7.1
 psycopg2==2.7.3
 Pygments==2.2.0
@@ -31,6 +33,7 @@ setupfiles==0.0.50
 six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.6.3
+sphinx-readable-theme==1.3.0
 sphinxcontrib-httpdomain==1.5.0
 sphinxcontrib-websupport==1.0.1
 SQLAlchemy==1.1.12
