--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Script==2.0.5
 Flask-Sphinx-Themes==1.0.1
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+gunicorn==19.7.1
 idna==2.5
 imagesize==0.7.1
 itsdangerous==0.24
